--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --project example && browserify -t browserify-css example/index.js -o example/bundle.js"
+    "build": "tsc --project example && browserify -t browserify-css example/index.js -o example/bundle.js",
+    "postinstall": "npm dedupe"
   },
   "repository": {
     "type": "git",
